--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Restaurant Page</title>
+    <title>Title</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <p>Alfredo's Pizza</p>
-        <div id="buttons">
-          <button class="home">Home</button>
-          <button class="menu">Menu</button>
-          <button class="contact">Contact</button>
-        </div>
-      </nav>
-    </header>
-    <div id="content">
-    </div>
-  </body>
+  <body></body>
 </html>
